--- a/Resources/Resources.vcxproj.filters
+++ b/Resources/Resources.vcxproj.filters
@@ -110,5 +110,8 @@
     <FxCompile Include="Shaders\Engine\Math\BoundingBox.hlsl" />
     <FxCompile Include="Shaders\Engine\TerrainRenderer\TerrainQuadTreeRenderer.hlsl" />
     <FxCompile Include="Shaders\Engine\TerrainRenderer\TerrainFeedbackRenderer.hlsl" />
+    <FxCompile Include="Shaders\Engine\TerrainRenderer\TerrainFeedbackDownScale.hlsl" />
+    <FxCompile Include="Shaders\Engine\TerrainRenderer\TerrainRvtLookupUpdater.hlsl" />
+    <FxCompile Include="Shaders\Engine\TerrainRenderer\TerrainRvtAtlasUpdater.hlsl" />
   </ItemGroup>
 </Project>
