--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="RuntimeVirtualTextureBackend.h" />
     <ClInclude Include="RuntimeVirtualTextureAtlas.h" />
     <ClInclude Include="RuntimeVirtualTexturePageTable.h" />
+    <ClInclude Include="RuntimeVirtualTextureValidRect.h" />
     <ClInclude Include="Task_SplitHeightMap.h" />
     <ClInclude Include="TerrainBackend.h" />
     <ClInclude Include="TerrainTextureAtlasTileCache.h" />
@@ -285,6 +286,7 @@
     <ClCompile Include="RuntimeVirtualTextureBackend.cpp" />
     <ClCompile Include="RuntimeVirtualTextureAtlas.cpp" />
     <ClCompile Include="RuntimeVirtualTexturePageTable.cpp" />
+    <ClCompile Include="RuntimeVirtualTextureValidRect.cpp" />
     <ClCompile Include="TAAPass.cpp" />
     <ClCompile Include="Task_SplitHeightMap.cpp" />
     <ClCompile Include="TerrainBackend.cpp" />
