--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -177,11 +177,11 @@
     <ClInclude Include="Misc.h" />
     <ClInclude Include="RaytracedTerrainShadow.h" />
     <ClInclude Include="ReTextureFileFormat.h" />
-    <ClInclude Include="RuntimeVirtualTextureAtlasTileCache.h" />
-    <ClInclude Include="RuntimeVirtualTextureBackend.h" />
-    <ClInclude Include="RuntimeVirtualTextureAtlas.h" />
-    <ClInclude Include="RuntimeVirtualTexturePageTable.h" />
-    <ClInclude Include="RuntimeVirtualTextureValidRect.h" />
+    <ClInclude Include="RuntimeVTAtlasTileCache.h" />
+    <ClInclude Include="RuntimeVTBackend.h" />
+    <ClInclude Include="RuntimeVTAtlas.h" />
+    <ClInclude Include="RuntimeVTPageTable.h" />
+    <ClInclude Include="RuntimeVTValidRect.h" />
     <ClInclude Include="TerrainTiledTextureHeapAllocationCache.h" />
     <ClInclude Include="Task_SplitHeightMap.h" />
     <ClInclude Include="TerrainBackend.h" />
@@ -284,11 +284,11 @@
     <ClCompile Include="Misc.cpp" />
     <ClCompile Include="RaytracedTerrainShadow.cpp" />
     <ClCompile Include="ReTextureFileFormat.cpp" />
-    <ClCompile Include="RuntimeVirtualTextureAtlasTileCache.cpp" />
-    <ClCompile Include="RuntimeVirtualTextureBackend.cpp" />
-    <ClCompile Include="RuntimeVirtualTextureAtlas.cpp" />
-    <ClCompile Include="RuntimeVirtualTexturePageTable.cpp" />
-    <ClCompile Include="RuntimeVirtualTextureValidRect.cpp" />
+    <ClCompile Include="RuntimeVTAtlasTileCache.cpp" />
+    <ClCompile Include="RuntimeVTBackend.cpp" />
+    <ClCompile Include="RuntimeVTAtlas.cpp" />
+    <ClCompile Include="RuntimeVTPageTable.cpp" />
+    <ClCompile Include="RuntimeVTValidRect.cpp" />
     <ClCompile Include="TerrainTiledTextureHeapAllocationCache.cpp" />
     <ClCompile Include="TAAPass.cpp" />
     <ClCompile Include="Task_SplitHeightMap.cpp" />
