--- a/Renderer/Renderer.vcxproj.filters
+++ b/Renderer/Renderer.vcxproj.filters
@@ -55,12 +55,6 @@
     <Filter Include="头文件\GPUData">
       <UniqueIdentifier>{da1d3731-8b6f-46cf-9de5-84c56f76e5c1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="头文件\Renderer\StreamTextureSystem">
-      <UniqueIdentifier>{1892b8e1-e51d-4c02-957e-25b45205950f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="源文件\Renderer\StreamTextureSystem">
-      <UniqueIdentifier>{d6cf5766-f277-4f3f-a951-eb9930212be0}</UniqueIdentifier>
-    </Filter>
     <Filter Include="源文件\Uploader">
       <UniqueIdentifier>{7c24d7a0-4b48-4944-9a9b-eb6a47d7e5c9}</UniqueIdentifier>
     </Filter>
@@ -78,9 +72,6 @@
     </Filter>
     <Filter Include="头文件\Renderer\Terrain">
       <UniqueIdentifier>{f1734a5b-1928-4c53-b453-ada76f981bdd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="头文件\Renderer\StreamVirtualTextureSystem">
-      <UniqueIdentifier>{b3714281-59aa-48d6-93c6-88159617eb70}</UniqueIdentifier>
     </Filter>
     <Filter Include="头文件\Renderer\Terrain\VegetationSystem">
       <UniqueIdentifier>{002a59dc-3426-434c-a021-371b5e042c81}</UniqueIdentifier>
@@ -105,9 +96,6 @@
     </Filter>
     <Filter Include="源文件\Misc">
       <UniqueIdentifier>{26cf6b99-36f4-4230-8973-edad757b01f4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="源文件\Renderer\StreamVirtualTextureSystem">
-      <UniqueIdentifier>{53e65f89-2b01-4703-934b-b3ca5b12dbc8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -360,6 +348,9 @@
     <ClInclude Include="TerrainTiledTextureHeapAllocationCache.h">
       <Filter>头文件\Renderer\TerrainRenderer</Filter>
     </ClInclude>
+    <ClInclude Include="TerrainGrassLand.h">
+      <Filter>头文件\Renderer\TerrainRenderer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BuddyHeapAllocator.cpp">
@@ -600,6 +591,9 @@
       <Filter>源文件\Renderer\TerrainRenderer</Filter>
     </ClCompile>
     <ClCompile Include="TerrainTiledTextureHeapAllocationCache.cpp">
+      <Filter>源文件\Renderer\TerrainRenderer</Filter>
+    </ClCompile>
+    <ClCompile Include="TerrainGrassLand.cpp">
       <Filter>源文件\Renderer\TerrainRenderer</Filter>
     </ClCompile>
   </ItemGroup>
