--- a/OfflineTask/OfflineTask.vcxproj
+++ b/OfflineTask/OfflineTask.vcxproj
@@ -133,12 +133,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BakeTerrainAlbedo.h" />
     <ClInclude Include="GeneralTasks.h" />
     <ClInclude Include="GenerateGrassBlade.h" />
     <ClInclude Include="ResolveHDAFile.h" />
     <ClInclude Include="TextureProcessor.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BakeTerrainAlbedo.cpp" />
     <ClCompile Include="GeneralTasks.cpp" />
     <ClCompile Include="GenerateGrassBlade.cpp" />
     <ClCompile Include="Main.cpp" />
