--- a/Resources/Resources.vcxproj.filters
+++ b/Resources/Resources.vcxproj.filters
@@ -117,5 +117,6 @@
     <FxCompile Include="Shaders\Engine\TerrainRenderer\RuntimeVTPageTableChangedPass2.hlsl" />
     <FxCompile Include="Shaders\Engine\TerrainRenderer\TerrainQuadTreeNearRenderer.hlsl" />
     <FxCompile Include="Shaders\Engine\TerrainRenderer\TerrainQuadTreeFarRenderer.hlsl" />
+    <FxCompile Include="Shaders\Engine\TerrainRenderer\TerrainTextureBaker.hlsl" />
   </ItemGroup>
 </Project>
