--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -168,8 +168,9 @@
     <ClInclude Include="CommandSignatureManger.h" />
     <ClInclude Include="DeferredLightPass.h" />
     <ClInclude Include="FormatConverter.h" />
-    <ClInclude Include="GrasslandBackend.h" />
+    <ClInclude Include="GrasslandRenderer.h" />
     <ClInclude Include="GrasslandLinearBuffer.h" />
+    <ClInclude Include="GrasslandLinearBufferCache.h" />
     <ClInclude Include="HierarchyInstancedStaticMesh.h" />
     <ClInclude Include="CascadeShadowPass.h" />
     <ClInclude Include="Misc.h" />
@@ -256,8 +257,9 @@
     <ClCompile Include="DirectStorageTest.cpp" />
     <ClCompile Include="FormatConverter.cpp" />
     <ClCompile Include="GenerateCloudNoiseTask.cpp" />
-    <ClCompile Include="GrasslandBackend.cpp" />
+    <ClCompile Include="GrasslandRenderer.cpp" />
     <ClCompile Include="GrasslandLinearBuffer.cpp" />
+    <ClCompile Include="GrasslandLinearBufferCache.cpp" />
     <ClCompile Include="HierarchyInstancedStaticMesh.cpp" />
     <ClCompile Include="CascadeShadowPass.cpp" />
     <ClCompile Include="Misc.cpp" />
